# FAlc

./: .gitignore  CMakeLists.txt  README.md  test.cxx
FractalAlchemy/: CMakeLists.txt  FunctionRelation.hxx  FunctionRelation_impl.hxx  FunctionRule.hxx  FunctionRule_impl.hxx  RecursiveFunctionManager.hxx  RecursiveFunctionManager_impl.hxx  RecursiveFunctionRule.hxx  RecursiveFunctionRule_impl.hxx
